2003-12-20  Bas Wijnen <b.wijnen@phys.rug.nl> and Roland Clobus
<rclobus@bigfoot.com>
	* theme/*/Makefile.am: Added Makefile.am in all directories
	* client/gtk/data/Makefile.am, client/gtk/theme.c,
	* client/gtk/guimap.c: renamed images directory to themes
	directory. splash.png moved to pixmap directory
	* po/fr.po, po/de.po: removed some obvious wrong fuzzy translations

2003-12-17  Roland Clobus <rclobus@bigfoot.com>
	* client/common/i18n.c, po/fr.po: Added french translation by Arnaud MALON
	<moko@geumeuleu.com>
	* client/common/i18n.c, client/gtk/gui.c: The untranslated language
	strings will be converted to UTF-8.

2003-12-16  Bas Wijnen <b.wijnen@phys.rug.nl>
	* All files except ai: Added proper copyright notice.
	* client/admin-gtk.c, client/build.c, client/client.c,
	client/client.h, client/chat.c, client/connect.c, client/develop.c,
	client/discard.c, gameover.c, gnocatan.c, gold.c, gui.c, gui.h,
	guimap.c, guimap.h, histogram.c, histogram.h, i18n.c, i18n.h,
	identity.c, legend.c, monopoly.c, name.c, player.c, player.h,
	plenty.c, polygon.c, polygon.h, quote.c, resource.c, road_building.c,
	robber.c, setup.c, settingscreen.c, stock.c, theme.c, theme.h,
	trade.c, turn.c: removed.
	* client/common/authors.h, client/common/build.c,
	client/common/callback.c, client/common/callback.h,
	client/common/chat.c, client/common/client.c, client/common/client.h,
	client/common/develop.c, client/common/gnocatan.c,
	client/common/i18n.c, client/common/i18n.h, client/common/modes.h,
	client/common/player.c, client/common/resource.c,
	client/common/robber.c, client/common/setup.c, client/common/stock.c,
	client/common/turn.c, client/gtk/admin-gtk.c, client/gtk/frontend.h,
	client/gtk/gui.h, client/gtk/guimap.h, client/gtk/histogram.h,
	client/gtk/polygon.h, client/gtk/theme.h, client/gtk/callbacks.c,
	client/gtk/chat.c, client/gtk/connect.c, client/gtk/develop.c,
	client/gtk/discard.c, client/gtk/frontend.c, client/gtk/gameover.c,