@@ -1,3 +1,10 @@
+2003-12-21 0.8.1.1  Bas Wijnen <b.wijnen@phys.rug.nl>
+	* client/common/Makefile.am: Generalized file generation for
+	authors.h.
+	* client/gtk/develop.c: Removed debugging statements.
+	* client/gtk/interface.c (global, frontend_discard_remove,
+	place_robber, frontend_robber): Fixed state bug (#863836).
+
 2003-12-20  Bas Wijnen <b.wijnen@phys.rug.nl> and Roland Clobus
 <rclobus@bigfoot.com>
 	* theme/*/Makefile.am: Added Makefile.am in all directories
